logo shifted lower to fix problem in firefox

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,7 +2,7 @@
 .logo{
     height: 140px;
     width: 155px;
-    margin-top: -1.9rem;
+    margin-top: -1.6rem;
 }
 .header{
     display: flex;
